# CGRA-reconfigurable-cell-development

./: .gitignore  CMakeLists.txt  README.md
Entrega_Articulo/: README.md  article_ieee.tex  references.bib
Entrega_Avance_1/: article_ieee.tex  references.bib
Entrega_Avance_1/images/: diagrama_2nivel_tikz.tex
Entrega_Avance_2/: article_ieee.tex
Proyecto/: CMakeLists.txt
Proyecto/memory/: Access_controller.h  Local_DMA.h  PE_Memory_Cell.h  PE_Memory_Cell_unit_test.cpp  PE_Memory_Mesh_Cell.h  README.md  SRAM_dual_port.h  SRAM_dual_port__TB.cpp
Proyecto/mesh/: CGRA_Mesh_1x1_Test__TB.cpp  CGRA_Mesh_2x2_Heterogeneous_Test__TB.cpp  CGRA_Mesh_ComplexTest__TB.cpp  CGRA_Mesh_Heterogeneous.h  CMakeLists.txt  README.md
Proyecto/mesh_wrapper/: CMakeLists.txt  MeshWrapper_CSRDMA_Sim__TB.cpp  MeshWrapper_SumReduction__TB.cpp  README.md  mesh_wrapper.cpp  mesh_wrapper.h
Proyecto/pe/: CMakeLists.txt  PE_Base.h  README.md
Proyecto/pe/mac/: ALU_MAC.h  ALU_MAC__TB.cpp  PE_MAC.h  PE_MAC_Cell.h  PE_MAC_SumReduction__TB.cpp  PE_MAC__TB.cpp
Proyecto/pe/routing/: PE_Routing_Cell.h  README.md  Routing_Cell.h  Routing_Cell_PE_Integration__TB.cpp
Proyecto/pe/scalar/: ALU_scalar.h  PE_Scalar_Cell.h  PE_scalar.h
Proyecto/pe/vector/: ALU_vector__TB.cpp  PE_Vector_Cell.h  PE_vector__TB.cpp
Proyecto/riscv_dma_main_mem_components/: README.md  RiscvDmaSystem__TB.cpp  cgra_kernel.h  csr_dma.cpp  csr_dma.h  dummy_cgra.h  main_memory.cpp  main_memory.h  makefile  riscv_core.cpp  riscv_core.h  top.cpp  top.h
Proyecto_HLS/hls_vitis_sum_reduction/: README.md  run_hls.tcl  sum_reduction_kernel.cpp  sum_reduction_kernel.h  tb_sum_reduction.cpp
Referencias/: .xdp-CGR-AI_Engine__A_scalable_CGRA-based_processing_platform_for_Artificial-Intelligence_in_space_applications.pdf-AbJXmY
cgra_mesh/: CGRA_Mesh.h  CGRA_Mesh_Heterogeneous.h  CGRA_Mesh_MAC_Heterogeneous__TB.cpp  CGRA_Mesh_Pipeline_Heterogeneous__TB.cpp  CGRA_Mesh__TB.cpp  CMakeLists.txt  PE_Base.h  PE_MAC_Cell.h  PE_Scalar_Cell.h  PE_Vector_Cell.h
memory/: CMakeLists.txt  PE_Memory_Cell__TB.cpp  PE_Memory_Cell_interconnect_test.cpp  Simple_NOC_Interconnect.h  memory_pipeline_diagram.html  project_status_overview.html
mesh/: CGRA_Mesh_ComplexTest__TB.cpp  CGRA_Mesh_Heterogeneous.h  CGRA_Mesh_Heterogeneous__TB.cpp  CGRA_Mesh_MAC_Heterogeneous__TB.cpp  CGRA_Mesh_Pipeline_Heterogeneous__TB.cpp  CGRA_Mesh_Pipeline__TB.cpp  CGRA_Mesh_SmokeTest__TB.cpp  CGRA_Mesh__TB.cpp  CMakeLists.txt  README.md
mesh/tools/: expected_values.py
mesh_wrapper/: CMakeLists.txt  mesh_wrapper.h
pe/: CMakeLists.txt  PE_Base.h  README.md  pe_isa.h  test_util.h
pe/mac/: ALU_MAC__TB.cpp  PE_MAC.h  PE_MAC__TB.cpp
pe/routing/: CMakeLists.txt  Routing_Cell.h  Routing_Cell_PE_Integration__TB.cpp  Routing_Cell__TB.cpp
pe/scalar/: ALU_scalar__TB.cpp
pe/vector/: ALU_vector.h  ALU_vector__TB.cpp  PE_vector.h
pe_mac/: ALU_MAC.h  ALU_MAC__TB.cpp  CMakeLists.txt  PE_MAC.h  PE_MAC__TB.cpp
pe_scalar/: ALU_scalar.h  ALU_scalar__TB.cpp  CMakeLists.txt  PE_scalar.h  PE_scalar__TB.cpp  README.md  pe_isa.h
pe_vector/: ALU_vector.h  ALU_vector__TB.cpp  CMakeLists.txt  PE_vector.h  PE_vector__TB.cpp  README.md  pe_isa.h
riscv_dma_main_mem_components/: CMakeLists.txt  RiscvDmaSystem__TB.cpp  csr_dma.cpp  dummy_cgra.cpp  riscv_core.cpp  riscv_core.h  riscv_dma_main_mem_components_tb.cpp  top.cpp  top.h
